Bug #68 - Initial built-in server feature merge
* drop publish behaviour
* calculate document root based on selected project
* sync with standard PHP server features